0.06
    - Changed the colorscheme a bit, toned it down

0.05 Wed Jul  1 11:15:57 GMT 2009
    - Rename methods instead of redefining ones from ::To::Text

0.04 Fri Jun 26 05:15:07 GMT 2009
    - Fixed a fatal typo. Damn.

0.03 Fri Jun 26 04:49:56 GMT 2009
    - Silence redefinition warnings in case someone loads this formatter
      after having loaded another one

0.02 Thu May 28 16:09:19 GMT 2009
    - Ship a README file generated from the Pod source
    - Use a color for R<> (same as I<>)

0.01 Sun May  3 17:48:11 GMT 2009
    - Initial release