@@ -8,4 +8,5 @@ abstract_from ('lib/Perl6/Perldoc/To/Ansi.pm');
 version_from  ('lib/Perl6/Perldoc/To/Ansi.pm');
 license       ('artistic');
 requires      ('Perl6::Perldoc' => '0.0.5');
+tests_recursive();
 WriteAll();
