@@ -1,0 +1,4 @@
+use strict;
+use warnings;
+use Test::More tests => 1;
+use_ok('Perl6::Perldoc::To::Ansi');
