@@ -1,5 +1,6 @@
 0.06
     - Changed the colorscheme a bit, toned it down
+    - Added a 01_compile.t
 
 0.05 Wed Jul  1 11:15:57 GMT 2009
     - Rename methods instead of redefining ones from ::To::Text
